upwork-devs/susanta-gautam/metricbeats-elk/kibana-ingress/kibana-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kibana-gateway
  namespace: elk
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - kibana.test.com
