upwork-devs/susanta-gautam/metricbeats-elk/kibana-ingress/disable-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: disable-mtls
  namespace: elk
spec:
  host: "*.elk.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
