upwork-devs/susanta-gautam/metricbeats-elk/kibana-ingress/kibana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kibana
  namespace: elk
spec:
  hosts:
    - kibana.test.com
  gateways:
    - kibana-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 5601
            host: kibana-kibana
